--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "server": "bun --hot server/server.ts",
+    "server": "cd server && go run main.go",
     "app": "concurrently \"bun run dev\" \"bun run server\""
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "chart.js": "^4.4.7",
     "concurrently": "^9.2.1",
     "dotenv": "^17.2.3",
     "vue": "^3.5.22",
+    "vue-chartjs": "^5.3.2",
     "vuetify": "^3.10.7"
   },
   "devDependencies": {
